--- a/kasper.html
+++ b/kasper.html
@@ -14,9 +14,10 @@
   </head>
   <body>
 
-    <!-- start header -->
-
+    <!-- start header and landing -->
     <div class="back">
+
+      <!-- start header -->
       <header>
         <div class="container">
           <img class="logo" src="photos/logo.png" alt="">
@@ -40,7 +41,11 @@
           </div>
         </div>
       </header>
+      <!-- end header -->
 
+      <!-- ---------------------------------------------------------------------- -->
+
+      <!-- start landing -->
       <div class="landing">
         <div class="icons">
           <i class="fa-solid fa-angle-left"></i>
@@ -68,9 +73,14 @@
           </div>
         </div>
       </div>
-    </div>
-    <!-- end header -->
+      <!-- end landing -->
 
+    </div>
+    <!-- end header and landing-->
+
+    <!-- ---------------------------------------------------------------- -->
+
+    <!-- start section -->
     <section>
       <div class="container">
         <div class="component">
@@ -139,6 +149,11 @@
         </div>
       </div>
     </section>
+    <!-- end section -->
+
+    <!-- ------------------------------------------------------------ -->
+
+    <!-- start aside -->
     <aside>
       <div class="container">
         <div class="help">
@@ -159,7 +174,11 @@
         </div>
       </div>
     </aside>
+    <!-- end aside -->
 
+    <!-- ----------------------------------------------------------- -->
+
+    <!-- start portfolio -->
     <div class="portfolio">
       <div class="container">
         <div class="component">
@@ -180,8 +199,8 @@
           <li><a href="#" target="_blank">print</a></li>
         </ul>
       </div>
-      <div class="photos_title">
 
+      <div class="photos_title">
         <div class="coll">
           <div class="image">
             <img src="photos/image/shuffle-01.jpg" alt="photo">
@@ -262,9 +281,75 @@
             <p>Photography</p>
           </div>
         </div>
-
+      </div>
+      <div class="more">
+        <span><a href="#">more</a></span>
+      </div>
+      <div class="content">
+        <div class="video">
+          <video class="vd" loop muted autoplay>
+            <source src="photos/awesome-video.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="text">
+          <h4>SUPER AWESOME VIDEO HERE</h4>
+          <p>Its all you need</p>
+          <button>see more</button>
+        </div>
       </div>
     </div>
+    <!-- end portfolio -->
+
+    <!-- ------------------------------------------------------------- -->
+
+    <!-- start about us -->
+    <div class="about_us">
+      <div class="container">
+        <div class="component">
+          <div class="title">
+            <h3>ABOUT US</h3>
+          </div>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et,
+            porttitor at sem. Mauris blandit aliquet elit,
+            eget tincidunt.
+          </p>
+        </div>
+        <div class="image">
+          <img src="photos/about_2.png" alt="">
+        </div>
+      </div>
+
+      <div class="contnet_two">
+        <div class="back_two">
+          <div class="container">
+            <div class="count">
+              <div class="card">
+                <i class="fa-solid fa-mug-hot"></i>
+                <h4>1,263</h4>
+                <p>Coffee Drinks</p>
+              </div>
+              <div class="card">
+                <i class="fa-solid fa-folder"></i>
+                <h4>256</h4>
+                <p>Completed Projects</p>
+              </div>
+              <div class="card">
+                <i class="fa-solid fa-envelope"></i>
+                <h4>1,743</h4>
+                <p>mail sent</p>
+              </div>
+              <div class="card">
+                <i class="fa-solid fa-award"></i>
+                <h4>17</h4>
+                <p>awards received</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end about us -->
     
   </body>
 </html>
