--- a/kasper.html
+++ b/kasper.html
@@ -347,9 +347,224 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <div class="taken">
+            <div class="test">
+              <div class="text_same">
+                <h4>TESTIMONIALS</h4>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
+                blandit aliquet elit, eget tincidunt.</p>
+              </div>
+              <div class="mask">
+                <div class="card">
+                  <div class="image_about">
+                    <img src="photos/skills-01.jpg" alt="">
+                  </div>
+                  <div class="para">
+                    <p>
+                      Curabitur arcu erat, accumsan id imperdiet et, 
+                      porttitor at sem. 
+                      Mauris blandit aliquet elit, eget tincidunt.
+                    </p>
+                    <span>John Doe, CEO</span>
+                    <hr>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="image_about">
+                    <img src="photos/skills-02.jpg" alt="">
+                  </div>
+                  <div class="para">
+                    <p>
+                      Curabitur arcu erat, accumsan id imperdiet et, 
+                      porttitor at sem. 
+                      Mauris blandit aliquet elit, eget tincidunt.
+                    </p>
+                    <span>John Doe, CEO</span>
+                    <hr>
+                  </div>
+                </div>
+                <div class="circels">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
+              </div>
+            </div>
+            <div class="skills">
+              <div class="text_same">
+                <h4>OUR SKILLS</h4>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
+                blandit aliquet elit, eget tincidunt.</p>
+              </div>
+              <div class="level">
+                <div class="label">
+                  adobe
+                </div>
+                <div class="action">
+                  <div class="hello one">
+                    <span class="span_one">95%</span>
+                  </div>
+                </div>
+              </div>
+              <div class="level">
+                <div class="label">
+                  Html & Css
+                </div>
+                <div class="action">
+                  <div class="hello two">
+                    <span class="span_two">90%</span>
+                  </div>
+                </div>
+              </div>
+              <div class="level">
+                <div class="label">
+                  JavaScript
+                </div>
+                <div class="action">
+                  <div class="hello three">
+                    <span class="span_three">85%</span>
+                  </div>
+                </div>
+              </div>
+              <div class="level">
+                <div class="label">
+                  PHP
+                </div>
+                <div class="action">
+                  <div class="hello four">
+                    <span class="span_four">88%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="back_three">
+          <div class="container">
+            <div class="text_john">
+              <h4>
+                "accumsan id imperdiet et, porttitor at sem. 
+                Mauris blandit aliquet elit, eget tincidunt."
+              </h4>
+              <p>John Doe</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- end about us -->
+
+    <!-- ---------------------------------------------------------------------------- -->
+
+    <!-- start PRICING -->
+
+    <div class="pricing">
+      <div class="container">
+        <div class="component">
+          <div class="title">
+            <h3>PRICING</h3>
+          </div>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et,
+            porttitor at sem. Mauris blandit aliquet elit,
+            eget tincidunt.
+          </p>
+        </div>
+        <div class="plan">
+          <div class="card_price">
+            <div class="text_price">
+              <h3>basic</h3>
+              <span>19</span>
+            </div>
+            <div class="features">
+              <p>feature no 1</p>
+              <p>extra feature</p>
+              <p>extra feature no 2</p>
+              <p>feature</p>
+            </div>
+            <div class="button">
+              <button class="buy">
+                buy now
+              </button>
+            </div>
+          </div>
+          <div class="card_price">
+            <div class="text_price">
+              <h3>premium</h3>
+              <span>29</span>
+            </div>
+            <div class="features">
+              <p>feature no 1</p>
+              <p>extra feature</p>
+              <p>extra feature no 2</p>
+              <p>feature</p>
+            </div>
+            <div class="button">
+              <button class="buy">
+                buy now
+              </button>
+            </div>
+          </div>
+          <div class="card_price">
+            <div class="text_price">
+              <h3>pro</h3>
+              <span>39</span>
+            </div>
+            <div class="features">
+              <p>feature no 1</p>
+              <p>extra feature</p>
+              <p>extra feature no 2</p>
+              <p>feature</p>
+            </div>
+            <div class="button">
+              <button class="buy">
+                buy now
+              </button>
+            </div>
+          </div>
+          <div class="card_price">
+            <div class="text_price">
+              <h3>platinum</h3>
+              <span>49</span>
+            </div>
+            <div class="features">
+              <p>feature no 1</p>
+              <p>extra feature</p>
+              <p>extra feature no 2</p>
+              <p>feature</p>
+            </div>
+            <div class="button">
+              <button class="buy">
+                buy now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="contact_us">
+          <h4>Contact us if you have special request</h4>
+          <button class="conta">contact us</button>
+        </div>
+      </div>
+      <div class="earth">
+        <div class="container">
+          <div class="holder">
+            <form class="email">
+              <i class="fa-regular fa-envelope"></i>
+              <input type="email" placeholder="your email">
+              <button class="subscribe">subscribe</button>
+            </form>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et,
+              porttitor at sem. Mauris blan dit aliquet elit,
+              eget tincidunt.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- end PRICING -->
     
   </body>
 </html>
