--- a/kasper.html
+++ b/kasper.html
@@ -11,7 +11,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet">
-    <link rel="stylesheet" href="../kasper_template/README.md">
+    <link rel="stylesheet" href="README.md">
   </head>
   <body>
 
